[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/actors/ToiletBoy.gd" type="Script" id=1]
[ext_resource path="res://assets/ToiletBoy.png" type="Texture" id=2]
[ext_resource path="res://assets/ToiletSeat.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Base"

[sub_resource type="Animation" id=2]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -30.0, 0.0, 30.0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48.5329, 36.5028 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 51.3054, 10.1405 )

[node name="Spigel" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="Spiegel" type="Sprite" parent="."]
position = Vector2( -6.67313, 5.16736 )
scale = Vector2( 0.0703611, 0.0746285 )
texture = ExtResource( 3 )

[node name="ToiletBoy" type="Sprite" parent="."]
position = Vector2( 0, -9.81796 )
scale = Vector2( 0.0703611, 0.0746285 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ToiletBoy"]
autoplay = "Run"
anims/Base = SubResource( 1 )
anims/Run = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10.3852 )
shape = SubResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0.532564, 12.9055 )
scale = Vector2( 5.0272, 3.30431 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
position = Vector2( 0, -26.6286 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
modulate = Color( 0.27451, 0.113725, 0.666667, 1 )
position = Vector2( 0, -9.31999 )
shape = SubResource( 4 )
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
